// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sequence-artist draw cross mark to 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [],
        "class": "sequence__activations",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "lineDash": [
                3,
                3,
              ],
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "sequence__message__line",
            "itemId": "message-0-4",
            "type": "line",
          },
          {
            "attrs": {
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Message",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "sequence__message__text",
            "type": "text",
          },
        ],
        "class": "sequence__message",
        "itemId": "message-0-4",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
    ],
    "type": "group",
  },
  "rendererData": {
    "ascii": {
      "layout": {
        "activations": [],
        "actors": [
          {
            "classifier": undefined,
            "id": "A",
            "label": "A",
            "order": 0,
          },
          {
            "classifier": undefined,
            "id": "B",
            "label": "B",
            "order": 1,
          },
        ],
        "events": [
          {
            "fromActorId": "A",
            "index": 0,
            "isSelf": false,
            "kind": "message",
            "label": "Message",
            "style": "solid",
            "toActorId": "B",
          },
        ],
        "spans": [],
        "title": undefined,
      },
      "plan": {
        "height": 11,
        "ops": [
          {
            "height": 3,
            "type": "rect",
            "width": 7,
            "x": 0,
            "y": 0,
          },
          {
            "align": "center",
            "text": "A",
            "type": "text",
            "x": 3,
            "y": 1,
          },
          {
            "height": 3,
            "type": "rect",
            "width": 7,
            "x": 11,
            "y": 0,
          },
          {
            "align": "center",
            "text": "B",
            "type": "text",
            "x": 14,
            "y": 1,
          },
          {
            "from": {
              "x": 3,
              "y": 3,
            },
            "to": {
              "x": 3,
              "y": 10,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 14,
              "y": 3,
            },
            "to": {
              "x": 14,
              "y": 10,
            },
            "type": "line",
          },
          {
            "text": "Message",
            "type": "text",
            "x": 5,
            "y": 4,
          },
          {
            "endHead": "filled",
            "from": {
              "x": 3,
              "y": 5,
            },
            "stroke": "solid",
            "to": {
              "x": 14,
              "y": 5,
            },
            "type": "line",
          },
        ],
        "width": 41,
      },
    },
  },
}
`;

exports[`sequence-artist draw participant classifier 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "lineWidth": 1.5,
                    "stroke": "#3b4044",
                  },
                  "type": "circle",
                },
                {
                  "attrs": {
                    "fill": null,
                    "lineWidth": 1.5,
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "ellipse",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "C",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-C",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [],
        "class": "sequence__activations",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "lineWidth": 1.5,
                    "stroke": "#3b4044",
                  },
                  "type": "circle",
                },
                {
                  "attrs": {
                    "fill": null,
                    "lineWidth": 1.5,
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "ellipse",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "C",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-C",
        "type": "group",
      },
    ],
    "type": "group",
  },
  "rendererData": {
    "ascii": {
      "layout": {
        "activations": [],
        "actors": [
          {
            "classifier": "actor",
            "id": "A",
            "label": "A",
            "order": 0,
          },
          {
            "classifier": "database",
            "id": "B",
            "label": "B",
            "order": 1,
          },
          {
            "classifier": "diamond",
            "id": "C",
            "label": "C",
            "order": 2,
          },
        ],
        "events": [],
        "spans": [],
        "title": undefined,
      },
      "plan": {
        "height": 11,
        "ops": [
          {
            "height": 3,
            "type": "rect",
            "width": 7,
            "x": 0,
            "y": 0,
          },
          {
            "align": "center",
            "text": "A",
            "type": "text",
            "x": 3,
            "y": 1,
          },
          {
            "height": 3,
            "type": "rect",
            "width": 7,
            "x": 8,
            "y": 0,
          },
          {
            "align": "center",
            "text": "B",
            "type": "text",
            "x": 11,
            "y": 1,
          },
          {
            "height": 3,
            "type": "rect",
            "width": 7,
            "x": 16,
            "y": 0,
          },
          {
            "align": "center",
            "text": "C",
            "type": "text",
            "x": 19,
            "y": 1,
          },
          {
            "from": {
              "x": 3,
              "y": 3,
            },
            "to": {
              "x": 3,
              "y": 10,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 11,
              "y": 3,
            },
            "to": {
              "x": 11,
              "y": 10,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 19,
              "y": 3,
            },
            "to": {
              "x": 19,
              "y": 10,
            },
            "type": "line",
          },
        ],
        "width": 41,
      },
    },
  },
}
`;

exports[`sequence-artist match example snapshot 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "attrs": {
          "lineDash": [
            2,
            2,
          ],
          "lineWidth": 2,
          "stroke": "#fdb05e",
        },
        "type": "rect",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "User",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-User",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Pintora",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-Pintora",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "anchor": "start",
              "fill": "#f8f8f2",
              "stroke": "#3b4044",
            },
            "class": "sequence__activation",
            "type": "rect",
          },
        ],
        "class": "sequence__activations",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "sequence__message__line",
            "itemId": "message-0-0",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "render this",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "sequence__message__text",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {
                  "fill": "#3b4044",
                  "stroke": "#3b4044",
                  "symbol": "circle",
                },
                "type": "marker",
              },
              {
                "attrs": {
                  "fill": "#fdb05e",
                  "fontWeight": "bold",
                  "text": "1",
                  "textAlign": "center",
                  "textBaseline": "middle",
                },
                "class": "sequence__number",
                "type": "text",
              },
            ],
            "type": "group",
          },
        ],
        "class": "sequence__message",
        "itemId": "message-0-0",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "lineDash": [
                3,
                3,
              ],
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "sequence__message__line",
            "itemId": "message-3-1",
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Has input changed?",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "sequence__message__text",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {
                  "fill": "#3b4044",
                  "stroke": "#3b4044",
                  "symbol": "circle",
                },
                "type": "marker",
              },
              {
                "attrs": {
                  "fill": "#fdb05e",
                  "fontWeight": "bold",
                  "text": "2",
                  "textAlign": "center",
                  "textBaseline": "middle",
                },
                "class": "sequence__number",
                "type": "text",
              },
            ],
            "type": "group",
          },
        ],
        "class": "sequence__message",
        "itemId": "message-3-1",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "stroke": "#fdb05e",
            },
            "class": "loop__label-box",
            "type": "polygon",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "loop",
              "textBaseline": "top",
            },
            "class": "label-text",
            "type": "text",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "[Check input]",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "loop__title",
            "type": "text",
          },
        ],
        "class": "loop",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "lineDash": [
                3,
                3,
              ],
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "sequence__message__line",
            "itemId": "message-5-1",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "your figure here",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "sequence__message__text",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {
                  "fill": "#3b4044",
                  "stroke": "#3b4044",
                  "symbol": "circle",
                },
                "type": "marker",
              },
              {
                "attrs": {
                  "fill": "#fdb05e",
                  "fontWeight": "bold",
                  "text": "3",
                  "textAlign": "center",
                  "textBaseline": "middle",
                },
                "class": "sequence__number",
                "type": "text",
              },
            ],
            "type": "group",
          },
        ],
        "class": "sequence__message",
        "itemId": "message-5-1",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "anchor": "start",
              "fill": "#F8EA75",
              "stroke": "#3b4044",
            },
            "class": "note__bg",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "note over",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "note sequence__note",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "anchor": "start",
              "fill": "#F8EA75",
              "stroke": "#3b4044",
            },
            "class": "note__bg",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "note aside actor",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "note sequence__note",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "anchor": "start",
              "fill": "#F8EA75",
              "stroke": "#3b4044",
            },
            "class": "note__bg",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "multiline note
is possible",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "note sequence__note",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "type": "line",
          },
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#f8f8f2",
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 600,
              "text": "Divider",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "divider",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "User",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-User",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Pintora",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-Pintora",
        "type": "group",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "bold",
          "text": "Sequence Diagram Example",
          "textAlign": "center",
        },
        "class": "sequence__title",
        "type": "text",
      },
    ],
    "type": "group",
  },
  "rendererData": {
    "ascii": {
      "layout": {
        "activations": [
          {
            "actorId": "Pintora",
            "endEventIndex": 2,
            "level": 0,
            "startEventIndex": 0,
          },
        ],
        "actors": [
          {
            "classifier": undefined,
            "id": "User",
            "label": "User",
            "order": 0,
          },
          {
            "classifier": undefined,
            "id": "Pintora",
            "label": "Pintora",
            "order": 1,
          },
        ],
        "events": [
          {
            "fromActorId": "User",
            "index": 0,
            "isSelf": false,
            "kind": "message",
            "label": "render this",
            "style": "solid",
            "toActorId": "Pintora",
          },
          {
            "fromActorId": "Pintora",
            "index": 1,
            "isSelf": true,
            "kind": "message",
            "label": "Has input changed?",
            "style": "dashed",
            "toActorId": "Pintora",
          },
          {
            "fromActorId": "Pintora",
            "index": 2,
            "isSelf": false,
            "kind": "message",
            "label": "your figure here",
            "style": "dashed",
            "toActorId": "User",
          },
          {
            "anchorActorIds": [
              "User",
              "Pintora",
            ],
            "index": 3,
            "kind": "note",
            "placement": "over",
            "text": "note over",
          },
          {
            "anchorActorIds": [
              "User",
              "User",
            ],
            "index": 4,
            "kind": "note",
            "placement": "right",
            "text": "note aside actor",
          },
          {
            "anchorActorIds": [
              "User",
              "User",
            ],
            "index": 5,
            "kind": "note",
            "placement": "right",
            "text": "multiline note
is possible",
          },
          {
            "index": 6,
            "kind": "divider",
            "text": "Divider",
          },
        ],
        "spans": [
          {
            "endEventIndex": 1,
            "kind": "loop",
            "label": "Check input",
            "sections": [],
            "startEventIndex": 1,
          },
        ],
        "title": "Sequence Diagram Example",
      },
      "plan": {
        "height": 32,
        "ops": [
          {
            "height": 3,
            "type": "rect",
            "width": 9,
            "x": 2,
            "y": 0,
          },
          {
            "align": "center",
            "text": "User",
            "type": "text",
            "x": 6,
            "y": 1,
          },
          {
            "height": 3,
            "type": "rect",
            "width": 12,
            "x": 21,
            "y": 0,
          },
          {
            "align": "center",
            "text": "Pintora",
            "type": "text",
            "x": 26,
            "y": 1,
          },
          {
            "from": {
              "x": 6,
              "y": 3,
            },
            "to": {
              "x": 6,
              "y": 31,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 26,
              "y": 3,
            },
            "to": {
              "x": 26,
              "y": 31,
            },
            "type": "line",
          },
          {
            "char": "|",
            "height": 10,
            "type": "fill",
            "width": 1,
            "x": 27,
            "y": 5,
          },
          {
            "height": 6,
            "type": "rect",
            "width": 30,
            "x": 19,
            "y": 7,
          },
          {
            "text": "render this",
            "type": "text",
            "x": 10,
            "y": 4,
          },
          {
            "endHead": "filled",
            "from": {
              "x": 6,
              "y": 5,
            },
            "stroke": "solid",
            "to": {
              "x": 26,
              "y": 5,
            },
            "type": "line",
          },
          {
            "text": "Has input changed?",
            "type": "text",
            "x": 28,
            "y": 8,
          },
          {
            "from": {
              "x": 26,
              "y": 9,
            },
            "to": {
              "x": 37,
              "y": 9,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 37,
              "y": 9,
            },
            "to": {
              "x": 37,
              "y": 11,
            },
            "type": "line",
          },
          {
            "endHead": "filled",
            "from": {
              "x": 37,
              "y": 11,
            },
            "to": {
              "x": 26,
              "y": 11,
            },
            "type": "line",
          },
          {
            "text": "your figure here",
            "type": "text",
            "x": 8,
            "y": 13,
          },
          {
            "endHead": "filled",
            "from": {
              "x": 26,
              "y": 14,
            },
            "stroke": "dashed",
            "to": {
              "x": 6,
              "y": 14,
            },
            "type": "line",
          },
          {
            "text": "loop Check input",
            "type": "text",
            "x": 21,
            "y": 7,
          },
          {
            "from": {
              "x": 0,
              "y": 29,
            },
            "to": {
              "x": 11,
              "y": 29,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 23,
              "y": 29,
            },
            "to": {
              "x": 34,
              "y": 29,
            },
            "type": "line",
          },
          {
            "text": "Divider",
            "type": "text",
            "x": 14,
            "y": 29,
          },
          {
            "height": 3,
            "type": "rect",
            "width": 14,
            "x": 10,
            "y": 16,
          },
          {
            "text": "note over",
            "type": "text",
            "x": 12,
            "y": 17,
          },
          {
            "height": 3,
            "type": "rect",
            "width": 21,
            "x": 12,
            "y": 20,
          },
          {
            "text": "note aside actor",
            "type": "text",
            "x": 14,
            "y": 21,
          },
          {
            "height": 4,
            "type": "rect",
            "width": 19,
            "x": 12,
            "y": 24,
          },
          {
            "text": "multiline note",
            "type": "text",
            "x": 14,
            "y": 25,
          },
          {
            "text": "is possible",
            "type": "text",
            "x": 15,
            "y": 26,
          },
        ],
        "width": 53,
      },
    },
  },
}
`;

exports[`sequence-artist will render boxes 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#d6d3fa",
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "text": "group participants",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "type": "text",
          },
        ],
        "class": "sequence__participant-boxes",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Alice",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [],
        "class": "sequence__activations",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Alice",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
    ],
    "type": "group",
  },
  "rendererData": {
    "ascii": {
      "layout": {
        "activations": [],
        "actors": [
          {
            "classifier": undefined,
            "id": "A",
            "label": "Alice",
            "order": 0,
          },
          {
            "classifier": undefined,
            "id": "B",
            "label": "B",
            "order": 1,
          },
        ],
        "events": [],
        "spans": [],
        "title": undefined,
      },
      "plan": {
        "height": 11,
        "ops": [
          {
            "height": 3,
            "type": "rect",
            "width": 10,
            "x": 1,
            "y": 0,
          },
          {
            "align": "center",
            "text": "Alice",
            "type": "text",
            "x": 5,
            "y": 1,
          },
          {
            "height": 3,
            "type": "rect",
            "width": 7,
            "x": 10,
            "y": 0,
          },
          {
            "align": "center",
            "text": "B",
            "type": "text",
            "x": 13,
            "y": 1,
          },
          {
            "from": {
              "x": 5,
              "y": 3,
            },
            "to": {
              "x": 5,
              "y": 10,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 13,
              "y": 3,
            },
            "to": {
              "x": 13,
              "y": 10,
            },
            "type": "line",
          },
        ],
        "width": 41,
      },
    },
  },
}
`;
